k8s/apps/bases/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tracker-api
  name: tracker-api
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-api
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tracker-api
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: northamerica-northeast1-docker.pkg.dev/track-compliance/tracker/api-js:master-94a45a4-1790684875 # {"$imagepolicy": "flux-system:api"}
          name: api
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 300m
              memory: 150Mi
            requests:
              cpu: 300m
              memory: 70Mi
          securityContext:
            runAsGroup: 1000
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
status: {}
