k8s/apps/bases/api/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-echo
  namespace: api
spec:
  ports:
  - name: http-echo
    port: 80
    targetPort: 8080
  selector:
    app: tracker-echo
  type: ClusterIP
status:
  loadBalancer: {}
