k8s/apps/bases/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-api
  namespace: api
spec:
  ports:
  - name: http-api
    port: 4000
    targetPort: 4000
  selector:
    app: tracker-api
  type: ClusterIP
status:
  loadBalancer: {}
