k8s/apps/bases/api/echo-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracker-echo
  namespace: api
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/publicgateway
  http:
    - name: gateway-to-echo
      match:
        - uri:
            prefix: /echo
      route:
        - destination:
            host: tracker-echo.api.svc.cluster.local
